<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/love_calculator"
        android:textSize="32sp"
        android:textColor="@color/pink"
        android:layout_margin="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_namew"
        android:layout_marginBottom="12dp"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        />

    <EditText
        android:id="@+id/first_et"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners"
        android:padding="12dp"
        android:hint="@string/you"/>

    <TextView
        android:layout_marginVertical="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Second Name"
        android:textSize="24sp"
        android:textColor="@color/purple_200"
        />

    <EditText
        android:id="@+id/second_et"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners"
        android:padding="12dp"
        android:hint="@string/me"/>

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:layout_marginTop="24dp"
        android:text="@string/calculate"/>


</LinearLayout>